@@ -12783,7 +12783,7 @@ extern maygc object ascii_to_string (const char * asciz);
     } while(0)
   #define with_sstring_0  with_string_0
 #else
-  #define with_string_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_offset,ascizvar_string,ascizvar_bytelen,ascizvar_data,NR) \
+  #define with_string_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_offset,ascizvar_string,ascizvar_bytelen,ascizvar_data,A,NR) \
     do { var uintL ascizvar_len;                                        \
       var uintL ascizvar_offset;                                        \
       var object ascizvar_string = unpack_string_ro(string,&ascizvar_len,&ascizvar_offset); \
@@ -12791,15 +12791,15 @@ extern maygc object ascii_to_string (const char * asciz);
       unpack_sstring_alloca_help_(ascizvar_string,ascizvar_len,ascizvar_offset, ptr1=,NR); \
      {var uintL ascizvar_bytelen = cslen(encoding,ptr1,ascizvar_len);   \
       var DYNAMIC_ARRAY(ascizvar_data,uintB,ascizvar_bytelen+1);        \
-      cstombs_help_(encoding,ptr1,ascizvar_len,&ascizvar_data[0],ascizvar_bytelen,NR); \
+      cstombs_help_(encoding,ptr1,ascizvar_len,&ascizvar_data[0],ascizvar_bytelen,A); \
       ascizvar_data[ascizvar_bytelen] = '\0';                           \
      {var char* ascizvar = (char*) &ascizvar_data[0];                   \
       statement}                                                        \
       FREE_DYNAMIC_ARRAY(ascizvar_data);                                \
     }} while(0)
   #define with_string_0(string,encoding,ascizvar,statement) \
-    with_string_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_offset,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,NOTREACHED)
-  #define with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_string,ascizvar_bytelen,ascizvar_data,NR) \
+    with_string_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_offset,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,ASSERT,NOTREACHED)
+  #define with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_string,ascizvar_bytelen,ascizvar_data,A,NR) \
     do { var object ascizvar_string = (string);                         \
       sstring_un_realloc(ascizvar_string);                              \
      {var uintL ascizvar_len = Sstring_length(ascizvar_string);         \
@@ -12807,21 +12807,21 @@ extern maygc object ascii_to_string (const char * asciz);
       unpack_sstring_alloca_help_(ascizvar_string,ascizvar_len,0, ptr1=,NR); \
      {var uintL ascizvar_bytelen = cslen(encoding,ptr1,ascizvar_len);   \
       var DYNAMIC_ARRAY(ascizvar_data,uintB,ascizvar_bytelen+1);        \
-      cstombs_help_(encoding,ptr1,ascizvar_len,&ascizvar_data[0],ascizvar_bytelen,NR); \
+      cstombs_help_(encoding,ptr1,ascizvar_len,&ascizvar_data[0],ascizvar_bytelen,A); \
       ascizvar_data[ascizvar_bytelen] = '\0';                           \
      {var char* ascizvar = (char*) &ascizvar_data[0];                   \
       statement}                                                        \
       FREE_DYNAMIC_ARRAY(ascizvar_data);                                \
     }}} while(0)
   #define with_sstring_0(string,encoding,ascizvar,statement) \
-with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,NOTREACHED)
+    with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,ASSERT,NOTREACHED)
 #endif
 # is used by PATHNAME, MISC, FOREIGN
-%% export_def(with_string_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_offset,ascizvar_string,ascizvar_bytelen,ascizvar_data,NR));
-%% export_def(with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_string,ascizvar_bytelen,ascizvar_data,NR));
+%% export_def(with_string_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_offset,ascizvar_string,ascizvar_bytelen,ascizvar_data,A,NR));
+%% export_def(with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar_len,ascizvar_string,ascizvar_bytelen,ascizvar_data,A,NR));
 %% /* cannot use emit_define because Rectype_* is not a define in lispbibl.d */
-%% puts("#define with_string_0(string,encoding,ascizvar,statement) with_string_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_offset,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,NOTREACHED)");
-%% puts("#define with_sstring_0(string,encoding,ascizvar,statement) with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,NOTREACHED)");
+%% puts("#define with_string_0(string,encoding,ascizvar,statement) with_string_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_offset,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,ASSERT,NOTREACHED)");
+%% puts("#define with_sstring_0(string,encoding,ascizvar,statement) with_sstring_0_help_(string,encoding,ascizvar,statement,ascizvar##_len,ascizvar##_string,ascizvar##_bytelen,ascizvar##_data,ASSERT,NOTREACHED)");
 
 # In some foreign modules, we call library functions that can do callbacks.
 # When we pass a parameter to such a library function, maybe it first does a
